kubernet-service/Ingress/WithClusterId/pod-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-web
  labels:
    app: web
spec:
  containers:
    - name: nginx
      image: nginx
