kubernet-service/Ingress/WithClusterId/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
